# Aether-Editor

./: .gitignore  Cargo.toml
.cargo/: config.toml
.github/workflows/: dev-feature-tracker.yml  dev-to-main-summary.yml
.qoder/plans/: Aether_VSCode级编辑器_cee1b23b.md  aether_review.agent.final.md  前后端分离架构重构_19f484ba.md
crates/aether-core/: Cargo.toml
crates/aether-core/examples/: benchmark.rs
crates/aether-core/src/: benchmarks.rs  incremental_lexer.rs  lib.rs  persistent_history.rs  render_prep.rs  simd_utils.rs
crates/aether-dap/: Cargo.toml
crates/aether-dap/src/: client.rs  lib.rs  session.rs  transport.rs  types.rs
crates/aether-lsp/: Cargo.toml
crates/aether-lsp/src/: client.rs  incremental_sync.rs  lib.rs  semantic_tokens.rs  server.rs  sync.rs  transport.rs  types.rs
crates/aether-plugin/: Cargo.toml
crates/aether-plugin/src/: lib.rs  permissions.rs  registry.rs  runtime.rs
crates/aether-remote/: Cargo.toml
crates/aether-remote/src/: container.rs  git.rs  lib.rs  remote_fs.rs  ssh.rs  workspace.rs
crates/aether-render/: Cargo.toml
crates/aether-render/src/: lib.rs  theme.rs  vscode_theme.rs
crates/aether-render/src/d2d/: brush_cache.rs  factory.rs  gpu_compute.rs  gpu_text.rs  mod.rs  text.rs
crates/aether-shared/src/: settings.rs
crates/aether-tree-sitter/: Cargo.toml
crates/aether-tree-sitter/src/: highlighter.rs  language.rs  lib.rs  theme_mapping.rs
crates/aether-win32/: Cargo.toml
crates/aether-win32/src/: activity_bar.rs  command_palette.rs  dialogs.rs  editor.rs  git.rs  ime.rs  input.rs  (+12 more)
scripts/: build-release.ps1
(+14 files in other folders)
