[package]
name = "aether-render"
version.workspace = true
edition.workspace = true

[dependencies]
aether-core = { path = "../aether-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
windows = { version = "0.58", features = ["Win32_Graphics_Direct2D", "Win32_Graphics_Direct2D_Common", "Win32_Graphics_Dxgi", "Win32_Graphics_Dxgi_Common", "Win32_Graphics_DirectWrite", "Win32_Graphics_Gdi", "Win32_Foundation", "Foundation_Numerics", "Win32_System_Performance", "Win32_System_SystemInformation", "Win32_UI_HiDpi"] }
